2011-07-22  Frank Siegert  <frank.siegert@cern.ch>

	* Added ATLAS_2011_S9120807

	* Add two more observables to MC_DIPHOTON and make its isolation cut
	more LHC-like

	* Add linear photon pT histo to MC_PHOTONJETS

2011-07-20  Andy Buckley  <andy@insectnation.org>

	* Making MC_TTBAR work with semileptonic ttbar events and generally
	tidying the code.

2011-07-19  Andy Buckley  <andy@insectnation.org>

	* Version bump to 1.5.2.b01 in preparation for a release in the
	very near future.

2011-07-18  David Mallows <dave.mallows@gmail.com>

	* Replaced MC_TTBAR: Added t,tbar reconstruction. Not yet working.

2011-07-18  Andy Buckley  <andy@insectnation.org>

	* bin/rivet-buildplugin.in: Pass the AM_CXXFLAGS
	variable (including the warning flags) to the C++ compiler when
	building user analysis plugins.

	* include/LWH/DataPointSet.h: Fix accidental setting of errorMinus
	= scalefactor * error_Plus_. Thanks to Anton Karneyeu for the bug
	report!

2011-07-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2011_S8884919 (charged hadron multiplicity in NSD
	events corrected to pT>=0).

	* Added CMS_2010_S8656010 and CMS_2010_S8547297 (charged
	hadron pT and eta in NSD events)

	* Added CMS_2011_S8968497 (chi_dijet)

	* Added CMS_2011_S8978280 (strangeness)

2011-07-13  Andy Buckley  <andy@insectnation.org>

	* Rivet PDF manual updates, to not spread disinformation about
	bootstrapping a Genser repo.

2011-07-12  Andy Buckley  <andy@insectnation.org>

	* bin/make-plots: Protect property reading against unstripped \r
	characters from DOS newlines.

	* bin/rivet-mkhtml: Add a -M unmatch regex flag (note that these
	are matching the analysis path rather than individual histos on
	this script), and speed up the initial analysis identification and
	selection by avoiding loops of regex comparisons for repeats of
	strings which have already been analysed.

	* bin/compare-histos: remove the completely (?) unused histogram